<resources>
    <string name="app_name">GithubApp</string>
    <string name="name">Name</string>
    <string name="following">following</string>
    <string name="followers">followers</string>
    <string name="id">id</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="public_repo">Public Repo</string>
</resources>